# cortex

./: .gitignore  README.md  circles.py  circles2.py  circles3.py  circles4.py  circles5.py  cortex_2axis.py  cortex_2axis2l.py  cortex_andor.py  cortex_andor2.py  cortex_andor2_be27787.py  cortex_andor3.py  cortex_andor4.py  cortex_andor5.py  cortex_bumps.txt  cortex_bumps2.py  cortex_bumps_sgd.py  cortex_mnist.py  cortex_nn.py  cortex_nn2.py  cortex_xor.py  go.sh  linalg_test.m  mojave.py  skeleton.py  test_poweriter.py  test_sinc_mlp.py
bio-inspired/: bumps.py  circles3.py  circles_grad.py  circles_umap.py  cortex_2axis.py  cortex_2axis2l.py  cortex_andor.py  cortex_andor2.py  cortex_andor4.py  cortex_andor5.py  cortex_bumps.txt  cortex_bumps_sgd.py  cortex_circles.py  cortex_mnist.py  cos_sim_test.py  parse_images.py  schmid_test.py  skeleton.py  tmp.py  vector_tfrmr.py
cuda_simsearch/: Makefile  dune  dune-project  main.c  main.cpp  ncurses.ml  run.sh  simdb_test.ml  simsearch.cu  simsearch.h
cuda_simsearch/old/: function_description.ml  type_description.ml
ec3/: .virum_grammar.mly.kate-swp  README.md  VGWrapper.ml  ast.ml  clean.sh  clip_model.py  config.py  constants.ml  constants.py  data_exchange.py  db_improved.S  db_prog.S  db_prog.txt  db_sorted.S  deps.txt  dreamcheck.txt  dune  ec3.py  ec31.py  ec32.py  ec33.py  ec34.py  editree.ml  editree_test.ml  environment.yml  explore_model.ipynb  gpu_matmul_speed.py  graf.ml  install-deps.sh  levenshtein.ml  lexer.mll  logo.ml  logo.proto  logo_proto_filter.pl  logoext.ml  logofilerun.ml  main.ml  old.ml  parser.mly  pdata.ml  (+23 more)
ec3/_build/: .db  .digest-db  log
ec3/_build/default/: dune-project  lexer.ml  logo.ml  parser.ml  parser.mli  parser.mly  parser__mock.ml.mock  parser__mock.mli.inferred  program.ml  test.logo  virum_grammar.mly
ec3/_build/default/.dune/: configurator  configurator.v2
ec3/_build/default/.merlin-conf/: exe-program
ec3/_build/default/.program.eobjs/: dune__exe.ml-gen  dune__exe__Lexer.impl.all-deps  dune__exe__Logo.impl.all-deps  dune__exe__Parser.intf.all-deps  dune__exe__Program.impl.all-deps  logo.ml.d  parser.ml.d  parser.mli.d  parser__mock.ml.mock.d  program.ml.d
ec3/_build/default/.program.eobjs/byte/: dune__exe.cmi  dune__exe.cmo  dune__exe.cmt  dune__exe__Lexer.cmi  dune__exe__Lexer.cmo  dune__exe__Lexer.cmt  dune__exe__Logo.cmi  dune__exe__Logo.cmo  dune__exe__Logo.cmt  dune__exe__Parser.cmi  dune__exe__Parser.cmti  dune__exe__Program.cmi  dune__exe__Program.cmo  dune__exe__Program.cmt
ec3/_build/default/.program.eobjs/native/: dune__exe.cmx  dune__exe__Lexer.cmx  dune__exe__Logo.cmx  dune__exe__Parser.cmx  dune__exe__Program.cmx
ec3/_build/default/logo_program/: logo_program.dune-package  logo_program.install
ec3/_build/default/logo_program/lib/: logo_program.cma  logo_program.cmxa  logo_program.cmxs
ec3/_build/default/logo_program/lib/.logo_program.objs/byte/: logo_program.cmi  logo_program.cmo  logo_program.cmt
ec3/_build/default/logo_program/lib/.logo_program.objs/native/: logo_program.cmx
ec3/_build/default/logo_program/lib/.merlin-conf/: lib-logo_program
ec3/_build/default/logo_program/test/.logo_program.eobjs/byte/: dune__exe__Logo_program.cmi  dune__exe__Logo_program.cmti
ec3/_build/default/logo_program/test/.logo_program.eobjs/native/: dune__exe__Logo_program.cmx
ec3/_build/default/logo_program/test/.merlin-conf/: exe-logo_program
ec3/_build/install/default/lib/logo_program/: META  dune-package  opam
ec3/logo_program/: dune-project
ec3/logo_program/lib/: dune
ec3/logo_program/test/: dune
ec3/recognizer/: model.py
graph-test/: .demo_planar.ml.kate-swp  demo_planar.ml  dune  dune-project
graph-test/demo_planar/: dune-project
graph-test/demo_planar/lib/: dune
graph-test/demo_planar/test/: dune
levenshtein/: dune  dune-project  levenshtein.cs  levenshtein.ml  run.sh  tmp.txt
old/: AlphaZero_pseudocode.py  cortex_paint.py  distance_oom.py  linalg_test.m  test_gauss.py  test_l2distcalc.py  test_plot2.py  test_plot3.py  test_plt.py  tmp_poweriter_outerupt.py  tmp_vmap.py  tmp_vmap2.py
onet-test/: dune  dune-project  net.ml  run.sh
otorch-test/: conv.sh  dune  dune-project  nn.ml  nn.sh  otorch.ml  otorch.py  otorch2.ml  run.sh  torch_copy_test.py
