(menhir
	(modules parser))

(ocamllex lexer)

; (rule
; 	(targets
; 		logo_pb.ml
; 		logo_pb.mli
; 		logo_pp.ml
; 		logo_pp.mli
; 		logo_types.ml
; 		logo_types.mli
; 	)
; 	(deps logo.proto)
; 	(action
; 	(progn
; 		(run ocaml-protoc -I /usr/include -binary -pp -ml_out ./ %{deps} )
; 		(bash "rm -rf logod_pb2.py logod.proto")
; 		(bash "cat logo.proto | ./logo_proto_filter.pl > logod.proto")
; 		(bash "protoc --python_out=./ logod.proto")
; 		(bash "cp logod_pb2.py ../../logod_pb2.py")
; 		(bash "export OCAMLPARAM='_,rounds=4,O3=1,inline=100,inline-max-unroll=5'")
; 	))
; )
; (modules logo_pb logo_pp logo_types logo parser lexer vgwrapper colors levenshtein ast vae program)

(executable
	(name program)
	(modules logo parser lexer vgwrapper colors levenshtein vae ast program)
	(libraries vg vg.cairo pbrt vector torch torch.vision pcre lwt lwt.unix logs logs.threaded domainslib ocamlgraph)
	)


; to install these libraries, run:
; opam install core core_unix vg cairo2 pbrt vector
; opam switch create myswitch ocaml-variants.4.14.0+options ocaml-option-flambda
; export OCAMLPARAM='_,rounds=4,O3=1,inline=100,inline-max-unroll=5'

; python 3.10 (pytorch doesn't work with 3.11): 
; source ~/venv/py310/bin/activate
