(menhir
	(modules parser))

(ocamllex lexer)

; (rule
; 	(targets
; 		logo_pb.ml
; 		logo_pb.mli
; 		logo_pp.ml
; 		logo_pp.mli
; 		logo_types.ml
; 		logo_types.mli
; 	)
; 	(deps logo.proto)
; 	(action
; 	(progn
; 		(run ocaml-protoc -I /usr/include -binary -pp -ml_out ./ %{deps} )
; 		(bash "rm -rf logod_pb2.py logod.proto")
; 		(bash "cat logo.proto | ./logo_proto_filter.pl > logod.proto")
; 		(bash "protoc --python_out=./ logod.proto")
; 		(bash "cp logod_pb2.py ../../logod_pb2.py")
; 		(bash "export OCAMLPARAM='_,rounds=4,O3=1,inline=100,inline-max-unroll=5'")
; 	))
; )
; (modules logo_pb logo_pp logo_types logo parser lexer vgwrapper colors levenshtein ast vae program)

;%{common} = (vg vg.cairo vector torch torch.vision pcre lwt lwt.unix logs logs.threaded domainslib sexplib))

(library
	(name colors)
	(modules colors)
	(libraries vg vg.cairo logs logs.threaded)
	)

(library
	(name vgwrapper)
	(modules vgwrapper)
	(libraries vg vg.cairo logs logs.threaded colors)
	)

(library
	(name logo)
	(modules logo)
	(libraries vg vg.cairo logs logs.threaded vgwrapper colors)
	)

(library
	(name parser)
	(modules parser)
	(libraries vg vg.cairo logs logs.threaded logo vgwrapper colors)
	)

(library
	(name lexer)
	(modules lexer)
	(libraries vg vg.cairo logs logs.threaded parser logo vgwrapper colors)
	)
	
(library
	(name logoext)
	(modules logoext)
	(libraries vg vg.cairo logs logs.threaded parser logo vgwrapper colors lexer)
	)

(library
	(name levenshtein)
	(modules levenshtein)
	(libraries logs logs.threaded)
	)
	
(library
	(name ast)
	(modules ast)
	(libraries logo)
	)
	
(library
	(name graf)
	(modules graf)
	(libraries vg vg.cairo vector torch torch.vision logs logs.threaded domainslib sexplib psq lexer parser logo vgwrapper colors levenshtein ast)
	)
	
(library
	(name vae)
	(modules vae)
	(libraries torch torch.vision logs logs.threaded domainslib)
	)
	
(library 
	(name editree)
	(modules editree)
	(libraries levenshtein logs))

(library	
	(name program)
	(modules program)
	(libraries vg vg.cairo vector torch torch.vision pcre logs logs.threaded domainslib sexplib graf lexer parser logo vgwrapper colors levenshtein ast vae editree logoext)
	)

(executable
	(name main)
	(modules main )
	(libraries vg vg.cairo vector torch torch.vision pcre logs logs.threaded domainslib sexplib program)
	(modes exe) ; options: byte exe
	)

(executable
	(name verify)
	(modules verify)
	(libraries vg vg.cairo vector torch torch.vision pcre logs logs.threaded domainslib sexplib program)
	(modes exe) ; options: byte exe
	)
	
(executable 
	(name editree_test)
	(modules editree_test)
	(libraries levenshtein editree))
	
(executable
	(name logofilerun)
	(modules logofilerun)
	(libraries vg vg.cairo vector torch torch.vision pcre logs logs.threaded program logoext)
	(modes exe)
	)
	
;(executable
;	(name graf)
;	(modules logo parser lexer vgwrapper colors levenshtein ast graf)
;	(libraries vg vg.cairo vector sexplib logs logs.threaded) 
;	)


; to install these libraries, run:
; opam install core core_unix vg cairo2 pbrt vector
; opam switch create myswitch ocaml-variants.4.14.0+options ocaml-option-flambda
; export OCAMLPARAM='_,rounds=4,O3=1,inline=100,inline-max-unroll=5'

; python 3.10 (pytorch doesn't work with 3.11): 
; source ~/venv/py310/bin/activate
